--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,12 @@
           <artifactId>postgresql</artifactId>
           <version>42.7.2</version>
       </dependency>
+      <dependency>
+          <groupId>com.sparkjava</groupId>
+          <artifactId>spark-core</artifactId>
+          <version>2.9.4</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
 </project>
