--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=3000
+server.servlet.session.timeout=10m
 spring.datasource.url=jdbc:postgresql://localhost:5432/autostrada
 spring.datasource.username=postgres
 spring.datasource.password=admin
