--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ server.ssl.key-store=classpath:server-keystore.jks
 server.ssl.key-store-password=changeit
 server.ssl.key-store-type=JKS
 spring.devtools.restart.enabled=true
+server.error.whitelabel.enabled=false
