--- a/frontend-service/src/main/resources/application.properties
+++ b/frontend-service/src/main/resources/application.properties
@@ -12,6 +12,11 @@ spring.web.resources.cache.period=0
 logging.level.root=INFO
 logging.level.com.example.frontend=DEBUG
 
+server.ssl.enabled=true
+server.ssl.key-store=classpath:server-keystore.jks
+server.ssl.key-store-password=changeit
+server.ssl.key-store-type=JKS
+
 # Backend microservices URLs (can be externalized to environment variables)
 backend.autostrada.url=http://localhost:8081
 backend.casello.url=http://localhost:8082
