--- a/autostrada-service/src/main/resources/application.properties
+++ b/autostrada-service/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/autostrada
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.maximum-pool-size=5
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
