--- a/biglietto-service/src/main/resources/application.properties
+++ b/biglietto-service/src/main/resources/application.properties
@@ -2,10 +2,11 @@ spring.application.name=biglietto-service
 server.port=8086
 
 # Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/autostrada
+spring.datasource.url=jdbc:postgresql://localhost:5432/Biglietto
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.maximum-pool-size=5
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
