--- a/utente-service/src/main/resources/application.properties
+++ b/utente-service/src/main/resources/application.properties
@@ -2,22 +2,21 @@ spring.application.name=utente-service
 server.port=8090
 
 # Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/autostrada
+spring.datasource.url=jdbc:postgresql://localhost:5432/Utenti
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.maximum-pool-size=5
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# SSL (opzionale)
 server.ssl.enabled=false
 
 # Session
 server.servlet.session.timeout=10m
 
-# Security (disabilitare per semplicità o configurare)
 spring.security.user.name=admin
 spring.security.user.password=admin
