sono arrivato fino a casello(non funzionante)

--- a/autostrada-service/src/main/resources/application.properties
+++ b/autostrada-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=autostrada-service
 server.port=8081
 
 # Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/autostrada
+spring.datasource.url=jdbc:postgresql://localhost:5432/Autostrada
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
