--- a/dispositivi-service/pom.xml
+++ b/dispositivi-service/pom.xml
@@ -22,6 +22,13 @@
     </properties>
 
     <dependencies>
+        <!-- MQTT Shared Library -->
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>mqtt-shared</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
