servizio di publish messaggio e lettura targa

--- a/dispositivi-service/src/main/resources/application.properties
+++ b/dispositivi-service/src/main/resources/application.properties
@@ -18,3 +18,7 @@ server.ssl.enabled=false
 
 # Session
 server.servlet.session.timeout=10m
+
+# MQTT Broker Configuration
+mqtt.broker.host=localhost
+mqtt.broker.port=1883
