push definitivo dei file py per il sistema telepass

--- a/pagamento-service/src/main/resources/application.properties
+++ b/pagamento-service/src/main/resources/application.properties
@@ -9,10 +9,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.maximum-pool-size=5
 
 # JPA
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
+spring.jpa.hibernate.ddl-auto=none
 # SSL (opzionale)
 server.ssl.enabled=false
 
