--- a/frontend-service/src/main/resources/application.properties
+++ b/frontend-service/src/main/resources/application.properties
@@ -1,23 +1,31 @@
 server.port=8080
 spring.application.name=frontend-service
 
-# Disable banner for cleaner logs
-spring.main.banner-mode=off
+# --- CONFIGURAZIONE THYMELEAF ---
+# Disabilita la cache per vedere le modifiche agli HTML senza riavviare il server
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 
-# Static resources configuration
+# --- RISORSE STATICHE (JS, CSS, Immagini) ---
+# Spring cercherà i file statici in /static/ (es. /static/js/main.js)
 spring.web.resources.static-locations=classpath:/static/
+# Impostiamo il cache period a 0 per lo sviluppo
 spring.web.resources.cache.period=0
 
-# Logging
+# --- LOGGING ---
 logging.level.root=INFO
-logging.level.com.example.frontend=DEBUG
+# Corretto il package se il tuo progetto usa com.uniupo
+logging.level.com.uniupo.frontend=DEBUG
 
+# --- SICUREZZA SSL ---
 server.ssl.enabled=true
 server.ssl.key-store=classpath:server-keystore.jks
 server.ssl.key-store-password=changeit
 server.ssl.key-store-type=JKS
 
-# Backend microservices URLs (can be externalized to environment variables)
+# --- MICROSERVIZI BACKEND ---
 backend.autostrada.url=http://localhost:8081
 backend.casello.url=http://localhost:8082
 backend.corsia.url=http://localhost:8083
@@ -28,3 +36,6 @@ backend.pagamento.url=http://localhost:8087
 backend.multa.url=http://localhost:8088
 backend.veicolo.url=http://localhost:8089
 backend.utente.url=http://localhost:8090
+
+# Disabilita banner
+spring.main.banner-mode=off
