ELIMINAZIONE A CASCATA,domani procedo alla configurazione https per tutti i microservizi e studio un modo elegante per le varie join

--- a/autostrada-service/src/main/resources/application.properties
+++ b/autostrada-service/src/main/resources/application.properties
@@ -18,3 +18,9 @@ server.ssl.enabled=false
 
 # Session
 server.servlet.session.timeout=10m
+
+#rabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
