--- a/dispositivi-service/src/main/resources/application.properties
+++ b/dispositivi-service/src/main/resources/application.properties
@@ -22,3 +22,9 @@ server.servlet.session.timeout=10m
 # MQTT Broker Configuration
 mqtt.broker.host=localhost
 mqtt.broker.port=1883
+
+#rabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
