--- a/casello-service/src/main/resources/application.properties
+++ b/casello-service/src/main/resources/application.properties
@@ -18,3 +18,9 @@ server.ssl.enabled=false
 
 # Session
 server.servlet.session.timeout=10m
+
+#rabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
