checkpoint per salvo, voglio rimodulare il codice java in modo che sia il microservizio che mi faccia le join e non il lato client

--- a/corsia-service/src/main/resources/application.properties
+++ b/corsia-service/src/main/resources/application.properties
@@ -13,9 +13,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# SSL (opzionale)
-server.ssl.enabled=false
+server.ssl.enabled=true
+server.ssl.key-store=classpath:corsia-keystore.jks
+server.ssl.key-store-password=changeit
+server.ssl.key-store-type=JKS
 
+# Il trust-store serve per quando il servizio chiama gli altri
+server.ssl.trust-store=classpath:truststore.jks
+server.ssl.trust-store-password=changeit
 # Session
 server.servlet.session.timeout=10m
 
