--- a/frontend-service/src/main/resources/application.properties
+++ b/frontend-service/src/main/resources/application.properties
@@ -1,41 +1,35 @@
 server.port=8080
 spring.application.name=frontend-service
 
-# --- CONFIGURAZIONE THYMELEAF ---
-# Disabilita la cache per vedere le modifiche agli HTML senza riavviare il server
+# THYMELEAF CONFIG
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+spring.main.allow-bean-definition-overriding=true
 
-# --- RISORSE STATICHE (JS, CSS, Immagini) ---
-# Spring cercherà i file statici in /static/ (es. /static/js/main.js)
+# STATIC RESOURCES
 spring.web.resources.static-locations=classpath:/static/
-# Impostiamo il cache period a 0 per lo sviluppo
 spring.web.resources.cache.period=0
 
-# --- LOGGING ---
-logging.level.root=INFO
-# Corretto il package se il tuo progetto usa com.uniupo
-logging.level.com.uniupo.frontend=DEBUG
-
-# --- SICUREZZA SSL ---
+# SSL SERVER CONFIG
 server.ssl.enabled=true
-server.ssl.key-store=classpath:server-keystore.jks
+server.ssl.key-store=classpath:frontend-keystore.jks
 server.ssl.key-store-password=changeit
 server.ssl.key-store-type=JKS
 
-# --- MICROSERVIZI BACKEND ---
-backend.autostrada.url=http://localhost:8081
-backend.casello.url=http://localhost:8082
-backend.corsia.url=http://localhost:8083
-backend.regione.url=http://localhost:8084
-backend.dispositivi.url=http://localhost:8085
-backend.biglietto.url=http://localhost:8086
-backend.pagamento.url=http://localhost:8087
-backend.multa.url=http://localhost:8088
-backend.veicolo.url=http://localhost:8089
-backend.utente.url=http://localhost:8090
+# SSL TRUST STORE
+server.ssl.trust-store=classpath:truststore.jks
+server.ssl.trust-store-password=changeit
 
-# Disabilita banner
-spring.main.banner-mode=off
+# BACKEND URLS
+backend.autostrada.url=https://localhost:8081
+backend.casello.url=https://localhost:8082
+backend.corsia.url=https://localhost:8083
+backend.regione.url=https://localhost:8084
+backend.dispositivi.url=https://localhost:8085
+backend.biglietto.url=https://localhost:8086
+backend.pagamento.url=https://localhost:8087
+backend.multa.url=https://localhost:8088
+backend.veicolo.url=https://localhost:8089
+backend.utente.url=https://localhost:8090
