--- a/pagamento-service/src/main/resources/application.properties
+++ b/pagamento-service/src/main/resources/application.properties
@@ -13,7 +13,14 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 # SSL (opzionale)
-server.ssl.enabled=false
 
+server.ssl.enabled=true
+server.ssl.key-store=classpath:pagamento-keystore.jks
+server.ssl.key-store-password=changeit
+server.ssl.key-store-type=JKS
+
+# Il trust-store serve per quando il servizio chiama gli altri
+server.ssl.trust-store=classpath:truststore.jks
+server.ssl.trust-store-password=changeit
 # Session
 server.servlet.session.timeout=10m
